--- a/styale.css
+++ b/styale.css
@@ -120,6 +120,13 @@ html{
     }
   }
   
+  /* @media only screen and (max-width: 1000px) {
+    .mySlides img {
+      height: 300px;
+      width: 100%;
+    }
+  } */
+  
   /* Next & previous buttons */
   .prev, .next {
     cursor: pointer;
