--- a/styale.css
+++ b/styale.css
@@ -10,6 +10,15 @@ html{
     scroll-behavior: smooth;
     color: black;
 }
+ 
+::-webkit-scrollbar-thumb {
+  background: black !important;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
 /* loader */
 .load{
   background-color: white;
