--- a/styale.css
+++ b/styale.css
@@ -21,6 +21,9 @@ html{
 
 /* loader */
 .load{
+  position:fixed ;
+  top: 0;
+  left: 0;
   background-color: white;
   height: 100vh;
   width: 100%;
@@ -410,7 +413,7 @@ h1 {
 
 .logos {
   overflow: hidden;
-  padding: 80px 0;
+  padding: 30px 0;
   background: white;
   white-space: nowrap;
   position: relative;
@@ -420,7 +423,7 @@ h1 {
 .logos:after {
   position: absolute;
   top: 0;
-  width: 420px;
+  width: 220px;
   height: 100%;
   content: "";
   z-index: 2;
@@ -543,4 +546,20 @@ h1 {
   transform: scale(0.9);
 }
 
+/* about slide */
 
+.aboutslide{
+  margin-top: 70px;
+  width: 100%;
+  height: 92vh;
+  background-image: url('./assets/images/abous\ slide.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  box-shadow:inset 0px 0px 0px 2000px #000000b6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-attachment: fixed;
+}
