--- a/styale.css
+++ b/styale.css
@@ -122,7 +122,7 @@ html{
   }
 
   .mySlides img{
-    object-fit: fill;
+    /* object-fit: fill; */
     height: 100vh;
   }
 
@@ -557,6 +557,36 @@ h1 {
   background-position: center center;
   background-repeat: no-repeat;
   box-shadow:inset 0px 0px 0px 2000px #000000b6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-attachment: fixed;
+}
+
+.mt5{
+  margin-top: 100px;
+}
+
+.headingtext{
+  padding: 15px;
+  margin: 0 auto;
+  border-bottom: 3px solid black;
+  width: fit-content;
+}
+
+
+/* certificat */
+
+.Certificatealide{
+  margin-top: 70px;
+  width: 100%;
+  height: 92vh;
+  background-image: url('./assets/images/certificate.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  box-shadow:inset 0px 0px 0px 2000px #00000090;
   display: flex;
   justify-content: center;
   align-items: center;
