--- a/styale.css
+++ b/styale.css
@@ -27,6 +27,7 @@ html{
   background-color: white;
   height: 100vh;
   width: 100%;
+  z-index: 1222;
 }
 
 .middle {
@@ -105,7 +106,31 @@ html{
     color: white !important;
     background-color: white;
   }
+  .navbar-nav .nav-item{
+    position: relative;
+        
+    }
+    
+    .navbar-nav .nav-link::after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: -5px;
+        left: 0;
+        background-color: white;
+        visibility: hidden;
+        width: 0px;
+        transition: all 0.3s ease-in-out;
+    }
+    .navbar-nav .nav-item:hover ::after{
+      visibility: visible;
+      width: 80%;
+    }
 
+    /* .navbar-nav .nav-item .nav-link.active{
+      border-bottom: 2px solid white !important;
+    } */
  
   /* image slider */
 
@@ -140,7 +165,7 @@ html{
   } */
   
   /* Next & previous buttons */
-  .prev, .next {
+  /* .prev, .next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -153,13 +178,13 @@ html{
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
-  }
+  } */
   
   /* Position the "next button" to the right */
-  .next {
+  /* .next {
     right: 0;
     border-radius: 3px 0 0 3px;
-  }
+  } */
   
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover, .next:hover {
@@ -198,7 +223,7 @@ html{
     transition: background-color 0.6s ease;
   }
   
-  .active, .dot:hover {
+   .active, .dot:hover {
     background-color: #717171;
   }
   
@@ -320,7 +345,7 @@ h1 {
   background-color: #ddd;
 }
 
-.btn.active {
+.btn-togal .btn.active {
   color: white;
   background-color: #66666688;
   /* color: white; */
