--- a/styale.css
+++ b/styale.css
@@ -212,7 +212,7 @@ html{
   }
   
   /* The dots/bullets/indicators */
-  .dot {
+  /* .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -221,17 +221,17 @@ html{
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-  }
+  } */
   
-   .active, .dot:hover {
+   /* .active, .dot:hover {
     background-color: #717171;
-  } 
+  }  */
   
   /* Fading animation */
-  .fade {
+  /* .fade {
     animation-name: fade;
     animation-duration: 1.5s;
-  }
+  } */
   
   @keyframes fade {
     from {opacity: .4}
@@ -246,6 +246,7 @@ html{
 
 .main-2{
   margin-top: 100px;
+  
 }
  
  .text-1{
@@ -287,7 +288,6 @@ html{
 /* product base */
 
 .main {
-  max-width: 1000px;
   margin: auto;
 }
 
@@ -296,59 +296,14 @@ h1 {
   word-break: break-all;
 }
 
-.row {
-  margin: 10px -16px;
-}
 
-/* Add padding BETWEEN each column */
-.row,
-.row > .column {
-  padding: 8px;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  display: none; /* Hide all elements by default */
-} 
-
-/* Clear floats after rows */ 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 
 /* Content */
 .content {
   background-color: white;
-  /* padding: 10px; */
 }
 .content img{
   height: 280px;
-}
-
-/* The "show" class is added to the filtered elements */
-.show {
-  display: block;
-}
-
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  /* background-color: white; */
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #ddd;
-}
-
-.btn-togal .btn.active {
-  color: white;
-  background-color: #66666688;
-  /* color: white; */
 }
 
 
