--- a/styale.css
+++ b/styale.css
@@ -116,7 +116,7 @@ html{
         position: absolute;
         width: 100%;
         height: 2px;
-        bottom: -5px;
+        bottom: 0px;
         left: 0;
         background-color: white;
         visibility: hidden;
@@ -126,6 +126,13 @@ html{
     .navbar-nav .nav-item:hover ::after{
       visibility: visible;
       width: 80%;
+    }
+
+    .nav-item .active{
+         
+      border-bottom: 2px solid white !important;
+      padding-bottom: -70px !important;
+
     }
 
     /* .navbar-nav .nav-item .nav-link.active{
@@ -157,34 +164,7 @@ html{
     }
   }
   
-  /* @media only screen and (max-width: 1000px) {
-    .mySlides img {
-      height: 300px;
-      width: 100%;
-    }
-  } */
-  
-  /* Next & previous buttons */
-  /* .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  } */
-  
-  /* Position the "next button" to the right */
-  /* .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  } */
+
   
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover, .next:hover {
@@ -346,12 +326,6 @@ h1 {
 .aaa:hover i{
  color: white !important;
 }
-
-
-
-
-
-
 
 
 
